<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:paddingBottom="4dp"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/left_pokemon_image_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/drawable_primary_background"
                app:srcCompat="@drawable/icon_placeholder"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/left_pokemon_configuration_name"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/attack_direction_image_view" />

            <ImageView
                android:id="@+id/right_pokemon_image_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/drawable_primary_background"
                app:srcCompat="@drawable/icon_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/right_pokemon_configuration_name"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/attack_direction_image_view" />

            <ImageView
                android:id="@+id/attack_direction_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_forward_black_24dp"
                android:tint="@color/primary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/left_pokemon_configuration_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/primary_text_style"
                tools:text="Suuuper configuration"
                android:gravity="center"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/attack_direction_image_view"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/right_pokemon_configuration_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/primary_text_style"
                android:gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                tools:text="not so super configuration"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/attack_direction_image_view"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>
        <TextView
            android:id="@+id/empty_opponent_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/damage_calculator_empty_opponent_text"
            android:padding="8dp"
            android:visibility="gone"/>
        <ScrollView
            android:id="@+id/damage_results_frame_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="80dp">
                <TextView
                    android:id="@+id/damage_result_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:text="@string/damage_calculator_damage_result_title" />
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_0_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_1_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_2_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_3_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <es.developer.achambi.coreframework.ui.FloatingActionMenu
        android:id="@+id/damage_calculator_floating_save_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom">
    </es.developer.achambi.coreframework.ui.FloatingActionMenu>
    <include
        android:id="@+id/base_request_loading_frame"
        android:visibility="gone"
        layout="@layout/base_request_fragment_layout"/>
</FrameLayout>