...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_choose_configuration_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_light"
            android:text="@string/details_action_button_choose_configuration" />

        <Button
            android:id="@+id/details_damage_calculator_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/speed_calculator_title"
            android:backgroundTint="@color/primary_light"
            />

        <Button
            android:id="@+id/details_edit_configuration_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_light"
            android:text="@string/edit_configuration_activity_title" />

...
