...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_level_text"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/icon_placeholder" />

    <TextView
        android:id="@+id/pokemon_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="4dp"
        android:paddingStart="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/pokemon_image_view"
        app:layout_constraintRight_toLeftOf="@+id/pokemon_ability_text"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_config_name_text"
        tools:text="Pikachu" />

    <es.developer.achambi.pkmng.modules.ui.screen.TypeView
        android:id="@+id/pokemon_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
