...
    <string name="ev_bar_sp_defense_text">Sp.Def</string>
    <string name="ev_bar_speed_text">Speed</string>

    <string name="nature_increased_stat_text">+ %1$s</string>
    <string name="nature_decreased_stat_text">- %1$s</string>

    <string name="pokemon_details_dialog_title">Pokemon details</string>
    <string name="item_details_dialog_title">Item details</string>
    <string name="ability_details_dialog_title">Ability details</string>

    <string name="details_action_button_create_configuration">New Configuration</string>
    <string name="details_action_button_edit_configuration">Edit Configuration</string>
    <string name="details_action_button_damage_calculator">Damage Calculator</string>
...
    <string name="type_fairy_text">FAIRY</string>

    <string name="quick_detail_resistant_to_tag">Resistant to: %1$s</string>
    <string name="quick_detail_weak_against_tag">Weak against: %1$s</string>
    <string name="quick_detail_effective_against_tag">Effective against: %1$s</string>

    <string name="move_category_special_tag">Special</string>
    <string name="move_category_physical_tag">Physical</string>
    <string name="name_category_non_damaging_tag">Non-damaging</string>

    <string name="move_power_text_tag">Power</string>
    <string name="move_accuracy_text_tag">Accuracy</string>
    <string name="move_pp_text_tag">PP</string>
...
